fixed conway css on mobile

--- a/public/conway_game/conway.css
+++ b/public/conway_game/conway.css
@@ -117,7 +117,7 @@ text-align: right;
     }
 
     .main-body {
-        max-width: 80vw;
+        max-width: 75vw;
         min-height: 90vh;
     }
 
